optimize LKButtonRightMarginBlock, fix DropDownCatalog second DropDown visible state by add class visible

--- a/src/features/DropDownCatalog/ui/_DropDownCatalog.module.scss
+++ b/src/features/DropDownCatalog/ui/_DropDownCatalog.module.scss
@@ -43,3 +43,10 @@
         flex-grow: 0
     }
 }
+
+.visible{
+    opacity: 1 !important;
+    visibility: visible !important;
+    z-index: 20 !important;
+    transition: .3s;
+}
